--- a/style.scss
+++ b/style.scss
@@ -317,9 +317,11 @@ a{
 }
 
 .how-it-works-item__text{
-  margin-top: 0;
+  margin: 0 auto auto;
   text-align: center;
   font-size: 2rem;
+  min-height: 7rem;
+  max-width: 90%;
   color: #037693;
 }
 
@@ -460,6 +462,29 @@ rectangle-container{
   max-height: 80px;
   max-width: 80px;
   margin: auto;
+}
+
+.features-table__item{
+  padding: 2rem;
+}
+
+.table-item__text{
+  color: #037693;
+  font-size: 2.375rem;
+  text-align: center;
+  margin-bottom: 0;
+}
+
+.table-horizontal-line__line{
+  height: 2px;
+  width: 80%;
+  margin: 20px auto;
+}
+
+.table-vertical-line__line{
+  height: 10rem;
+  width: 2px;
+  margin: auto 20px;
 }
 
 
