--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ html {
   font-size: 16pt; }
 
 body {
-  width: 100vw; }
+  width: 99.2vw; }
 
 a {
   color: #f0f0f0;
@@ -141,6 +141,10 @@ a {
   margin-top: 50px;
   text-align: center; }
 
+.header__lines {
+  display: flex;
+  justify-content: flex-end; }
+
 .header__lines div {
   height: 10px;
   border-radius: 10px; }
@@ -196,7 +200,7 @@ a {
 
 .right-lines {
   display: flex;
-  justify-content: flex-end; }
+  flex-direction: row-reverse; }
 
 .white-line {
   background-color: white; }
@@ -371,6 +375,10 @@ rectangle-container {
 .features__items-table {
   margin: 80px auto 0; }
 
+.features-table {
+  width: 80%;
+  margin: 20px auto 0; }
+
 .table-item__icon-container {
   height: 80px;
   width: 100%;
@@ -394,7 +402,7 @@ rectangle-container {
 
 .table-horizontal-line__line {
   height: 2px;
-  width: 80%;
+  width: 90%;
   margin: 20px auto; }
 
 .table-vertical-line__line {
@@ -405,6 +413,31 @@ rectangle-container {
 .partners {
   height: 456px;
   background-image: url("img/partners_bg.png"); }
+
+.partners__wrapper {
+  height: 100%;
+  margin: 0; }
+
+.partners__title {
+  height: 30%;
+  color: #ffffff; }
+
+.partners__images {
+  height: 70%;
+  width: 95%;
+  margin: auto;
+  display: flex;
+  align-content: center; }
+
+.partners__images-container {
+  width: 100%;
+  height: 70px;
+  margin: auto;
+  display: flex;
+  justify-content: space-between; }
+
+.partners__icon {
+  object-fit: contain; }
 
 .events {
   height: 400px;
