--- a/style.scss
+++ b/style.scss
@@ -3,7 +3,7 @@ html{
 }
 
 body{
-  width: 100vw;
+  width: 99.2vw;
 }
 
 a{
@@ -173,6 +173,11 @@ a{
   text-align: center;
 }
 
+.header__lines{
+  display: flex;
+  justify-content: flex-end;
+}
+
 .header__lines div{
   height: 10px;
   border-radius: 10px;
@@ -240,7 +245,7 @@ a{
 
 .right-lines{
   display: flex;
-  justify-content: flex-end;
+  flex-direction: row-reverse;
 }
 
 .white-line{
@@ -450,6 +455,11 @@ rectangle-container{
   margin: 80px auto 0;
 }
 
+.features-table{
+  width: 80%;
+  margin: 20px auto 0;
+}
+
 .table-item__icon-container{
   height: 80px;
   width: 100%;
@@ -477,7 +487,7 @@ rectangle-container{
 
 .table-horizontal-line__line{
   height: 2px;
-  width: 80%;
+  width: 90%;
   margin: 20px auto;
 }
 
@@ -487,11 +497,39 @@ rectangle-container{
   margin: auto 20px;
 }
 
-
-
 .partners{
   height: 456px;
   background-image: url("img/partners_bg.png");
+}
+
+.partners__wrapper{
+  height: 100%;
+  margin: 0;
+}
+
+.partners__title{
+  height: 30%;
+  color: #ffffff;
+}
+
+.partners__images{
+  height: 70%;
+  width: 95%;
+  margin: auto;
+  display: flex;
+  align-content: center;
+}
+
+.partners__images-container{
+  width: 100%;
+  height: 70px;
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+}
+
+.partners__icon{
+  object-fit: contain;
 }
 
 .events{
