--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html {
-  font-size: 16pt; }
+  font-size: 20px; }
 
 body {
   width: 99.2vw; }
@@ -9,32 +9,34 @@ a {
   outline: none;
   text-decoration: none; }
 
+button:focus, button:active {
+  outline: none;
+  border: none; }
+
 .nav {
-  max-height: 200px;
+  max-height: 166.4px;
   width: 100%; }
+  .nav__icon {
+    height: 100%; }
+  .nav__wrapper {
+    height: 166.4px;
+    position: relative;
+    top: -166.4px;
+    display: flex;
+    justify-content: space-between;
+    margin: auto 10%; }
+  .nav__icon-container {
+    min-width: 20%;
+    margin: 18px 0 12px; }
 
 .nav-bg {
-  height: 200px; }
-
-.nav-bg__black {
-  background-color: #121111;
-  height: 80%; }
-
-.nav-bg__blue {
-  background-color: #0A272C;
-  height: 20%; }
-
-.nav-wrapper {
-  height: 200px;
-  position: relative;
-  top: -200px;
-  display: flex;
-  justify-content: space-between;
-  margin: auto 10%; }
-
-.nav__icon-container {
-  min-width: 20%;
-  margin: 18px 0 12px; }
+  height: 166.4px; }
+  .nav-bg__black {
+    background-color: #121111;
+    height: 80%; }
+  .nav-bg__blue {
+    background-color: #0A272C;
+    height: 20%; }
 
 .nav-list {
   height: 100%;
@@ -43,187 +45,180 @@ a {
   display: flex;
   justify-content: space-between;
   margin: 0; }
-
-.nav-list__element {
-  display: inline-block;
-  color: #f0f0f0;
-  font-size: 1.6875rem;
-  text-align: center;
-  vertical-align: bottom;
-  height: 100%; }
-
-.nav-list__element > a {
-  height: 100%;
-  display: flex;
-  margin: auto 5px;
-  align-content: center; }
-
-.nav-list__element > a > p {
-  width: content-box;
-  margin: auto; }
+  .nav-list__element {
+    display: inline-block;
+    color: #f0f0f0;
+    font-size: 1.56rem;
+    text-align: center;
+    vertical-align: bottom;
+    border-top: 2px solid #000000;
+    height: 100%;
+    box-sizing: border-box; }
+  .nav-list__element > a {
+    height: 100%;
+    display: flex;
+    margin: auto 5px;
+    align-content: center; }
+  .nav-list__element > a > p {
+    width: content-box;
+    margin: auto; }
+  .nav-list__element:hover, .nav-list__element:focus {
+    height: 100%;
+    background-color: #f0f0f070;
+    border-top: 2px solid #f0f0f0;
+    box-sizing: border-box; }
 
 .log-reg {
   min-width: 20%;
   display: flex;
   justify-content: space-between;
   margin: 0; }
-
-.log-reg__icon-text-container {
-  display: inline-block;
-  margin: auto; }
-
-.log-reg__text {
-  color: #f0f0f0;
-  font-size: 1rem;
-  margin: 0; }
-
-.log-reg__icon {
-  display: flex;
-  justify-self: center;
-  margin: auto; }
-
-.nav-list__element:hover, .nav-list__element:focus {
-  background-color: #f0f0f070;
-  border-top: 2px solid #f0f0f0;
-  box-sizing: border-box; }
+  .log-reg__icon-text-container {
+    display: inline-block;
+    margin: auto; }
+  .log-reg__text {
+    color: #f0f0f0;
+    font-size: 0.76rem;
+    margin: 0; }
+  .log-reg__icon {
+    display: flex;
+    justify-self: center;
+    margin: auto; }
 
 .header {
-  height: 1274px;
+  height: 1019.2px;
   width: 100%;
   background-image: url("img/header_bg.png");
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
   justify-content: center; }
-
-.header__wrapper {
-  width: 90%;
-  position: relative;
-  top: 35%;
-  display: flex;
-  justify-content: space-between;
-  align-content: center; }
-
-.header__image-container {
-  width: 32%; }
-
-.header__image {
-  width: 100%;
-  max-width: 561px;
-  max-height: 1144px; }
-
-.header__text {
-  width: 62%; }
-
-.header__titles-container {
-  width: 100%; }
-
-.header__titles-lines-container {
-  width: intrinsic;
-  width: -moz-max-content;
-  width: -webkit-max-content;
-  max-width: 100%;
-  margin: auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: center; }
-
-.header__title {
-  color: white;
-  font-size: 4rem;
-  margin-bottom: 0;
-  text-align: center; }
-
-.header__subtitle {
-  color: white;
-  font-family: Lato;
-  font-size: 2.875rem;
-  margin-top: 50px;
-  text-align: center; }
-
-.header__lines {
-  display: flex;
-  justify-content: flex-end; }
-
-.header__lines div {
-  height: 10px;
-  border-radius: 10px; }
+  .header__wrapper {
+    height: 100%;
+    width: 90%;
+    position: relative;
+    top: 25%;
+    display: flex;
+    justify-content: space-between;
+    align-content: center; }
+  .header__image-container {
+    margin-top: 2.3rem;
+    width: 32%; }
+  .header__image {
+    width: 100%;
+    max-width: 449px;
+    max-height: 915px; }
+  .header__text {
+    width: 62%; }
+  .header__titles-container {
+    width: 100%; }
+  .header__titles-lines-container {
+    width: intrinsic;
+    width: -moz-max-content;
+    width: -webkit-max-content;
+    max-width: 100%;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center; }
+  .header__title {
+    white-space: nowrap;
+    color: white;
+    font-size: 3.32rem;
+    margin-bottom: 0;
+    text-align: center; }
+  .header__subtitle {
+    color: white;
+    font-size: 1.84rem;
+    margin-top: 50px;
+    text-align: center; }
+  .header__lines {
+    display: flex;
+    justify-content: flex-end; }
+  .header__lines div {
+    height: 10px;
+    border-radius: 10px; }
 
 .header-lines__first-line {
-  width: 0.75rem;
-  margin-right: 1.5625rem; }
+  width: 0.48rem;
+  margin-right: 1.12rem; }
 
 .header-lines__second-line {
-  width: 1.5rem;
+  width: 0.96rem;
   margin: 0; }
 
 .header-lines__third-line {
-  width: 21.125rem;
-  margin-left: 0.9375rem; }
+  width: 13.52rem;
+  margin-left: 0.56rem; }
 
 .header-other-buttons {
   display: flex; }
+  .header-other-buttons__type-code-button {
+    font-size: 1.12rem; }
+  .header-other-buttons__join-event-button, .header-other-buttons__type-code-button {
+    width: 7.28rem; }
 
 .header-buttons {
-  margin-top: 20%;
+  margin-top: 10rem;
   display: flex;
   justify-content: center; }
+  .header-buttons__create-event-button {
+    margin-right: 7%; }
 
-.header-btn {
-  height: 2.3em;
+.header-button {
+  height: 3.04rem;
   color: white;
-  font-family: "Lato - Semibold";
-  font-size: 2.0625rem;
+  font-size: 1.32rem;
   font-weight: 400;
-  padding: auto .9em; }
+  padding: auto 1.2rem; }
+  .header-button:focus {
+    border: 2px solid #ffffff; }
 
-.header-buttons__create-event-btn {
-  margin-right: 7%; }
-
-.transparent-btn {
+.transparent-button {
   border: 2px solid white;
   background-color: transparent;
   color: #f0f0f0; }
 
-.white-btn {
+.white-button {
   border: 2px solid white;
   background-color: white;
   color: #037693; }
 
-.lines div {
-  height: 7px;
-  border-radius: 10px; }
-
 .lines__bigger-line {
-  width: 102px; }
+  height: 7px;
+  border-radius: 10px;
+  width: 4.08rem; }
 
 .lines__smaller-line {
-  width: 16px;
-  margin: auto 10px; }
+  height: 7px;
+  border-radius: 10px;
+  width: 0.64rem;
+  margin: auto 0.4rem; }
 
-.how-it-works__wrapper {
-  margin: 156px auto 184px; }
+.wrapper {
+  margin: 124.8px auto 147.2px; }
 
-.how-it-works__title-container {
+.title-container {
   width: intrinsic;
   width: -moz-max-content;
   width: -webkit-max-content;
   margin: auto; }
 
-.how-it-works__title {
-  font-size: 3.8125rem;
+.title {
+  font-weight: 300;
+  letter-spacing: 4.17px;
+  font-size: 3.32rem;
   text-align: center;
   color: #037693;
-  letter-spacing: 4.17px;
-  margin-bottom: 0; }
+  margin: 0; }
 
 .how-it-works__item {
   margin: auto; }
 
-.how-it-works__item_selected .how-it-works-item__btn {
+.how-it-works__item .how-it-works-item__button:focus {
   background-color: #037693; }
 
-.how-it-works__item_selected .how-it-works-item__btn .item-icon {
+.how-it-works__item .how-it-works-item__button:focus .item-icon {
   filter: invert(100%) sepia(0%) saturate(100%) brightness(10000%) contrast(100%); }
 
 .how-it-works__items-container {
@@ -235,13 +230,13 @@ a {
   height: 92px;
   width: 92px; }
 
-.how-it-works-item__btn-container {
+.how-it-works-item__button-container {
   display: flex;
   justify-content: center;
   width: 100%;
   margin: auto; }
 
-.how-it-works-item__btn {
+.how-it-works-item__button {
   height: 162px;
   width: 162px;
   border: 2px solid #037693;
@@ -250,21 +245,43 @@ a {
 .how-it-works-item__text {
   margin: 0 auto auto;
   text-align: center;
-  font-size: 2rem;
-  min-height: 7rem;
+  font-size: 1.44rem;
+  min-height: 2.76rem;
   max-width: 90%;
   color: #037693; }
 
-.interaction-block {
+.interaction {
   background-color: #037693;
   background-size: cover;
   max-height: 120rem; }
-
-.interaction__wrapper {
-  width: 80%;
-  margin: 0 auto 0 0;
-  display: flex;
-  justify-content: space-between; }
+  .interaction__wrapper {
+    width: 80%;
+    margin: 0 auto 0 0;
+    display: flex;
+    justify-content: space-between; }
+  .interaction__text-container {
+    width: 45%; }
+  .interaction__title {
+    color: #ffffff;
+    width: 60%;
+    min-width: 18.8rem;
+    font-size: 2.988rem;
+    font-weight: 700;
+    margin-bottom: 0; }
+  .interaction__subtitle {
+    display: inline-block;
+    color: #ffffff;
+    font-size: 1.5rem;
+    font-weight: 500; }
+  .interaction__text {
+    color: #ffffff;
+    font-size: .85rem;
+    letter-spacing: 0.25px;
+    font-weight: 300;
+    line-height: 33.33px; }
+  .interaction__images {
+    height: 580px;
+    margin: 100px 100px; }
 
 .interaction-logo {
   -ms-transform: rotate(-90deg);
@@ -282,32 +299,16 @@ a {
   left: 1rem;
   border: 1px solid #ffffff;
   border-right: none; }
-
-.interaction-logo__text {
-  display: inline;
-  margin: 0;
-  color: #ffffff; }
-
-.interaction-logo__line {
-  margin: auto 0; }
-
-.interaction-logo__dot {
-  margin: auto 0; }
-
-.interaction__text-container {
-  width: 60%; }
-
-.interaction__title {
-  color: #ffffff;
-  width: 60%;
-  min-width: 35rem;
-  font-size: 4rem;
-  margin-bottom: 0; }
-
-.interaction__subtitle {
-  display: inline-block;
-  color: #ffffff;
-  font-size: 2rem; }
+  .interaction-logo__text {
+    display: inline;
+    margin: 0;
+    color: #ffffff;
+    font-size: 1.8rem;
+    font-weight: 300;
+    letter-spacing: 0.2rem;
+    vertical-align: super; }
+  .interaction-logo__line, .interaction-logo__dot {
+    margin: auto 0; }
 
 .dot {
   background-color: #ffffff;
@@ -315,13 +316,13 @@ a {
   min-height: 1.2rem;
   max-width: 1.2rem;
   max-height: 1.2rem;
-  border-radius: 100px; }
+  border-radius: 100%; }
 
 .line {
   display: inline-block;
   background-color: #ffffff;
   height: 1px;
-  width: 20%;
+  width: 40%;
   min-width: 4rem;
   vertical-align: middle; }
 
@@ -371,40 +372,29 @@ a {
 .orange-text {
   color: #f0a765; }
 
-.interaction__text {
-  color: #ffffff;
-  font-size: 1rem;
-  letter-spacing: 0.25px;
-  font-weight: 300;
-  line-height: 33.33px; }
-
-.interaction__images {
-  height: 700px;
-  margin: 130px 120px; }
-
 rectangle-container {
   display: flex;
   flex-direction: column; }
 
 .second-rectangle-container {
   position: relative;
-  top: -17.5rem;
-  left: 9.7rem; }
+  top: -275px;
+  left: 175px; }
 
 .third-rectangle-container {
   position: relative;
-  top: -33.3rem; }
+  top: -545px; }
 
 .rounded-rectangle {
-  height: 364px;
-  width: 364px; }
+  height: 300px;
+  width: 300px; }
 
 .rounded-rectangle-text {
   position: relative;
-  top: -11rem;
-  width: 200px;
-  left: 80px;
-  font-size: 1.5rem;
+  top: -180px;
+  width: 180px;
+  left: 62px;
+  font-size: 1.28rem;
   text-align: center; }
 
 .features__items-table {
@@ -413,6 +403,8 @@ rectangle-container {
 .features-table {
   width: 80%;
   margin: 20px auto 0; }
+  .features-table__item {
+    padding: 2rem; }
 
 .table-item__icon-container {
   height: 80px;
@@ -426,12 +418,10 @@ rectangle-container {
   max-width: 80px;
   margin: auto; }
 
-.features-table__item {
-  padding: 2rem; }
-
 .table-item__text {
   color: #037693;
-  font-size: 2.375rem;
+  font-size: 1.68rem;
+  font-weight: 700;
   text-align: center;
   margin-bottom: 0; }
 
@@ -448,53 +438,92 @@ rectangle-container {
 .partners {
   height: 456px;
   background-image: url("img/partners_bg.png"); }
-
-.partners__wrapper {
-  height: 100%;
-  margin: 0; }
-
-.partners__title {
-  height: 30%;
-  color: #ffffff; }
-
-.partners__images {
-  height: 70%;
-  width: 95%;
-  margin: auto;
-  display: flex;
-  align-content: center; }
-
-.partners__images-container {
-  width: 100%;
-  height: 70px;
-  margin: auto;
-  display: flex;
-  justify-content: space-between; }
-
-.partners__icon {
-  object-fit: contain; }
+  .partners__wrapper {
+    height: 100%;
+    padding-top: 15px; }
+  .partners__title {
+    height: 30%;
+    color: #ffffff; }
+  .partners__images {
+    height: 70%;
+    width: 95%;
+    margin: auto;
+    display: flex;
+    align-content: center; }
+  .partners__images-container {
+    width: 100%;
+    height: 70px;
+    margin: auto;
+    display: flex;
+    justify-content: space-between; }
+  .partners__icon {
+    object-fit: contain; }
 
 .events {
   background-color: #e8e8e8; }
-
-.events__wrapper {
-  width: 85%;
-  margin: auto; }
-
-.events__title {
-  margin: 0; }
-
-.events__container {
-  padding: 100px;
-  display: flex;
-  justify-content: center; }
+  .events__wrapper {
+    width: 85%;
+    margin: auto;
+    padding-top: 64px; }
+  .events__title {
+    margin: auto; }
+  .events__container {
+    padding: 100px;
+    display: flex;
+    justify-content: center; }
 
 .event {
   margin: auto 3px;
   background-color: #ffffff;
-  height: 26rem;
-  width: 22rem;
-  max-width: 30vw; }
+  min-width: 467.2px; }
+  .event__title-container {
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 30px; }
+  .event__content-container {
+    margin: 7% auto;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0 10%; }
+  .event__title-first {
+    text-align: center;
+    color: #ffffff;
+    font-size: 3rem;
+    margin: 0;
+    font-weight: 300;
+    text-transform: uppercase; }
+  .event__title-second {
+    text-align: center;
+    color: #ffffff;
+    font-size: 3.56rem;
+    margin: 0;
+    text-transform: uppercase;
+    font-weight: 700; }
+  .event__text {
+    font-size: 1em;
+    margin-bottom: 5px;
+    text-align: center;
+    font-weight: 300;
+    line-height: 33.33px;
+    letter-spacing: 0.27px; }
+  .event__icon {
+    object-fit: contain;
+    height: 3.5rem; }
+  .event__button {
+    width: intrinsic;
+    width: -moz-max-content;
+    width: -webkit-max-content;
+    border-style: none;
+    padding: 0.2em 1em;
+    margin: 20px auto;
+    border-radius: 100px;
+    color: #ffffff;
+    font-size: 1.5rem; }
+  .event:hover {
+    box-shadow: 0 0 30px grey;
+    transform: scale(1.2);
+    z-index: 1; }
 
 .external-event .event__title-container {
   background-image: url("img/external-event.png"); }
@@ -505,54 +534,19 @@ rectangle-container {
 .internal-event .event__title-container {
   background-image: url("img/internal-event.png"); }
 
-.event__title-container {
-  background-repeat: no-repeat;
-  background-size: cover;
-  padding: 30px; }
-
-.event__content-container {
-  margin: 20px auto;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  padding: 0 10%; }
-
-.event__title {
-  text-align: center;
-  color: #ffffff;
-  font-size: 3rem;
-  margin: 0; }
-
-.event__text {
-  font-size: 1em;
-  margin-bottom: 5px;
-  text-align: center; }
-
-.event__icon {
-  object-fit: contain;
-  height: 4rem; }
-
-.event__button {
-  width: intrinsic;
-  width: -moz-max-content;
-  width: -webkit-max-content;
-  border-style: none;
-  padding: 0.2em 1em;
-  margin: 20px auto;
-  border-radius: 100px;
-  color: #ffffff;
-  font-size: 1.5em; }
-
-.event:hover {
-  box-shadow: 0 0 30px grey;
-  transform: scale(1.2);
-  z-index: 1; }
-
 .about-us__wrapper {
   width: 70%;
   margin: auto auto 100px; }
 
-.about-us-content-container {
+.about-us__title-container {
+  margin: 70px auto; }
+
+.about-us__circles {
+  display: flex;
+  justify-content: space-between;
+  align-items: center; }
+
+.about-us__content-container {
   display: flex;
   justify-content: space-between; }
 
@@ -561,61 +555,54 @@ rectangle-container {
   top: 6.95rem;
   left: -20%;
   border-color: #037693; }
-
-.about-us-logo__dot {
-  background-color: #037693; }
-
-.about-us-logo__line {
-  background-color: #037693;
-  width: 40%; }
-
-.about-us-logo__text {
-  color: #037693; }
+  .about-us-logo__dot {
+    background-color: #037693; }
+  .about-us-logo__line {
+    background-color: #037693;
+    width: 40%; }
+  .about-us-logo__text {
+    color: #037693; }
 
 .about-us-text__title, .about-us-text__subtitle {
   margin: 0;
   color: #037693; }
 
+.about-us-text__subtitle {
+  letter-spacing: 0.1rem; }
+
 .about-us-text__text {
   margin-top: 30px;
   color: #000000; }
-
-.about-us__circles {
-  display: flex;
-  justify-content: space-between;
-  align-items: center; }
 
 .stats {
   margin: auto 20px;
   display: flex;
   flex-direction: column;
   justify-content: center; }
-
-.stats__outer-circle {
-  width: 4rem;
-  height: 4rem;
-  border-radius: 6rem;
-  margin: auto auto 10px;
-  display: flex;
-  justify-content: center;
-  align-items: center; }
-
-.stats__inner-circle {
-  width: 2.5rem;
-  height: 2.5rem;
-  border-radius: 6rem;
-  border: 1px solid #ffffff; }
-
-.stats__name {
-  white-space: nowrap;
-  margin: 20px auto;
-  font-size: 1.5rem;
-  text-align: center; }
-
-.stats__numbers {
-  margin: 0;
-  font-size: 4rem;
-  text-align: center; }
+  .stats__outer-circle {
+    width: 3.8rem;
+    height: 3.8rem;
+    border-radius: 50%;
+    margin: auto auto 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center; }
+  .stats__inner-circle {
+    width: 2.5rem;
+    height: 2.5rem;
+    border-radius: 6rem;
+    border: 1px solid #ffffff; }
+  .stats__name {
+    white-space: nowrap;
+    margin: 20px auto;
+    font-size: 1.32rem;
+    text-align: center;
+    font-weight: 300; }
+  .stats__numbers {
+    margin: 0;
+    font-size: 2.76rem;
+    text-align: center;
+    font-weight: 400; }
 
 .footer {
   height: 400px;
