--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,5 @@
 html{
-  font-size: 20px;
+  font-size: 17px;
 }
 
 body{
@@ -61,6 +61,7 @@ button:focus, button:active{
   display: flex;
   justify-content: space-between;
   margin: 0;
+  padding: 0;
 
   &__element{
     display: inline-block;
@@ -76,7 +77,7 @@ button:focus, button:active{
   &__element > a{
     height: 100%;
     display: flex;
-    margin: auto 5px;
+    margin: auto 0.5rem;
     align-content: center;
   }
 
@@ -835,6 +836,96 @@ rectangle-container{
 }
 
 .footer{
-  height: 400px;
   background-color: #0d0d0d;
+
+  &__wrapper{
+    width: 80%;
+    margin: auto;
+  }
+
+  &__content-wrapper{
+    display: flex;
+    justify-content: space-between;
+    margin: 0 auto 5rem;
+    padding-top: 5rem;
+  }
+
+  &__first-col{
+    width: 19%;
+  }
+
+  &__first-col, &__second-col, &__third-col, &__fourth-col{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+  }
+
+  &__second-col, &__third-col, &__fourth-col {
+    margin-top: 4.9rem;
+    justify-content: flex-start;
+  }
+
+  &__fourth-col{
+    align-items: center;
+  }
+
+  &__icons{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &__icon{
+    height: 30%;
+    margin: auto;
+  }
+
+  &__text-under-icon{
+    color: #ffffff;
+    text-align: center;
+    font-size: 1rem;
+  }
+
+  &__list-item{
+    color: #ffffff;
+    font-size: 0.88rem;
+  }
+
+  &__list{
+    list-style: none;
+    padding: 0;
+  }
+
+  &__title{
+    color: #ffffff;
+  }
+
+  &__subtitle{
+    font-size: 0.88rem;
+    color: #ffffff;
+  }
+
+  &__email-address{
+    background-color: transparent;
+    border: none;
+    border-bottom: 2px solid #ffffff;
+    color: #ffffff;
+    background-image: url("img/Envelope.png");
+    background-repeat: no-repeat;
+    background-position-x: right;
+    background-position-y: center;
+    background-size: 20px;
+    text-align: center;
+  }
+
+  &__rights-reserved{
+    color: #ffffff;
+    margin: 0 auto;
+    font-size: 1rem;
+    text-align: center;
+  }
+
+  &__rights-reserved-container{
+    padding: 1rem;
+  }
 }
